--- a/src/_themes.scss
+++ b/src/_themes.scss
@@ -1,5 +1,5 @@
 // GLOBAL SCOPE LOADER: THEMES
-@import "Themes/basic-theme.scss";
-@import "Themes/dark-theme.scss";
-@import "Themes/black-theme.scss";
-@import "Themes/hacker-theme.scss";
+@import "Themes/basic-theme";
+@import "Themes/dark-theme";
+@import "Themes/black-theme";
+@import "Themes/hacker-theme";
