--- a/src/config/maps/core/_core-spacing-map.scss
+++ b/src/config/maps/core/_core-spacing-map.scss
@@ -4,11 +4,11 @@
 // - Map is collected into the $core-settings-map and is interpolated into custom properties.
 
 $core-spacing-map: (
-        spacing-xs: $spacing-xs,
-        spacing-small:$spacing-small,
-        spacing-medium: $spacing-medium,
-        spacing-large: $spacing-large,
-        spacing-xl: $spacing-xl,
-        spacing-xxl: $spacing-xxl,
-        spacing-xxxl: $spacing-xxxl,
+  spacing-xs: $spacing-xs,
+  spacing-small: $spacing-small,
+  spacing-medium: $spacing-medium,
+  spacing-large: $spacing-large,
+  spacing-xl: $spacing-xl,
+  spacing-xxl: $spacing-xxl,
+  spacing-xxxl: $spacing-xxxl
 );
