--- a/src/config/maps/themes/basic/keys/_keys.scss
+++ b/src/config/maps/themes/basic/keys/_keys.scss
@@ -5,41 +5,41 @@
 // - Map is collected into the $theme-basic-settings map and is interpolated into custom properties.
 
 $theme-basic-keys: (
-        primary-color: $primary-color,
-        primary-hover-color: $primary-hover-color,
-        primary-selected-color: $primary-selected-color,
-        primary-selected-hover-color: $primary-selected-hover-color,
-        primary-text-color: $primary-text-color,
-        text-color-on-primary: $text-color-on-primary,
-        text-color-on-inverted: $text-color-on-inverted,
-        secondary-text-color: $secondary-text-color,
-        placeholder-color: $placeholder-color,
-        icon-color: $icon-color,
-        link-color: $link-color,
-        primary-background-color: $primary-background-color,
-        primary-background-hover-color: $primary-background-hover-color,
-        secondary-background-color:$secondary-background-color,
-        grey-background-color:$grey-background-color,
-        allgrey-background-color: $allgrey-background-color,
-        inverted-color-background: $inverted-color-background,
-        disabled-background-color: $disabled-background-color,
-        disabled-text-color: $disabled-text-color,
-        positive-color: $positive-color,
-        positive-color-hover: $positive-color-hover,
-        positive-color-selected: $positive-color-selected,
-        positive-color-selected-hover: $positive-color-selected-hover,
-        negative-color: $negative-color,
-        negative-color-hover: $negative-color-hover,
-        negative-color-selected: $negative-color-selected,
-        negative-color-selected-hover: $negative-color-selected-hover,
-        private-color: $private-color,
-        shareable-color: $shareable-color,
-        ui-border-color: $ui-border-color,
-        layout-border-color: $layout-border-color,
-        warning-color: $warning-color,
-        warning-color-hover: $warning-color-hover,
-        warning-color-selected: $warning-color-selected,
-        warning-color-selected-hover: $warning-color-selected-hover
+  primary-color: $primary-color,
+  primary-hover-color: $primary-hover-color,
+  primary-selected-color: $primary-selected-color,
+  primary-selected-hover-color: $primary-selected-hover-color,
+  primary-text-color: $primary-text-color,
+  text-color-on-primary: $text-color-on-primary,
+  text-color-on-inverted: $text-color-on-inverted,
+  secondary-text-color: $secondary-text-color,
+  placeholder-color: $placeholder-color,
+  icon-color: $icon-color,
+  link-color: $link-color,
+  primary-background-color: $primary-background-color,
+  primary-background-hover-color: $primary-background-hover-color,
+  secondary-background-color: $secondary-background-color,
+  grey-background-color: $grey-background-color,
+  allgrey-background-color: $allgrey-background-color,
+  inverted-color-background: $inverted-color-background,
+  disabled-background-color: $disabled-background-color,
+  disabled-text-color: $disabled-text-color,
+  positive-color: $positive-color,
+  positive-color-hover: $positive-color-hover,
+  positive-color-selected: $positive-color-selected,
+  positive-color-selected-hover: $positive-color-selected-hover,
+  negative-color: $negative-color,
+  negative-color-hover: $negative-color-hover,
+  negative-color-selected: $negative-color-selected,
+  negative-color-selected-hover: $negative-color-selected-hover,
+  private-color: $private-color,
+  shareable-color: $shareable-color,
+  ui-border-color: $ui-border-color,
+  layout-border-color: $layout-border-color,
+  warning-color: $warning-color,
+  warning-color-hover: $warning-color-hover,
+  warning-color-selected: $warning-color-selected,
+  warning-color-selected-hover: $warning-color-selected-hover
 );
 
 // ## BASIC THEME SHADOW MAP: basic theme's shadow color map.
@@ -47,8 +47,8 @@ $theme-basic-keys: (
 // - Map is collected into the $theme-basic-settings map and is interpolated into custom properties.
 
 $theme-basic-shadow-keys: (
-        box-shadow-xs: $box-shadow-xs,
-        box-shadow-small: $box-shadow-small,
-        box-shadow-medium: $box-shadow-medium,
-        box-shadow-large: $box-shadow-large,
+  box-shadow-xs: $box-shadow-xs,
+  box-shadow-small: $box-shadow-small,
+  box-shadow-medium: $box-shadow-medium,
+  box-shadow-large: $box-shadow-large
 );
