--- a/src/config/maps/themes/hacker/keys/_hacker-theme-keys.scss
+++ b/src/config/maps/themes/hacker/keys/_hacker-theme-keys.scss
@@ -5,50 +5,49 @@
 // - Map is collected into the $theme-hacker-settings map and is interpolated into custom properties.
 
 $theme-hacker-keys: (
-        primary-color: $theme-hacker-primary-color,
-        primary-hover-color: $theme-hacker-primary-hover-color,
-        primary-selected-color: $theme-hacker-primary-selected-color,
-        primary-selected-hover-color: $theme-hacker-primary-selected-hover-color,
-        primary-text-color: $theme-hacker-primary-text-color,
-        text-color-on-inverted: $theme-hacker-text-color-on-inverted,
-        secondary-text-color: $theme-hacker-secondary-text-color,
-        placeholder-color: $theme-hacker-placeholder-color,
-        icon-color: $theme-hacker-icon-color,
-        link-color: $theme-hacker-link-color,
-        primary-background-color: $theme-hacker-primary-background-color,
-        primary-background-hover-color: $theme-hacker-primary-background-hover-color,
-        secondary-background-color: $theme-hacker-secondary-background-color,
-        grey-background-color: $theme-hacker-grey-background-color,
-        allgrey-background-color: $theme-hacker-allgrey-background-color,
-        inverted-color-background: $theme-hacker-inverted-color-background,
-        disabled-text-color: $theme-hacker-disabled-text-color,
-        disabled-background-color: $theme-hacker-disabled-background-color,
-        positive-color: $theme-hacker-positive-color,
-        positive-color-hover: $theme-hacker-positive-color-hover,
-        positive-color-selected: $theme-hacker-positive-color-selected,
-        positive-color-selected-hover: $theme-hacker-positive-color-selected-hover,
-        negative-color: $theme-hacker-negative-color,
-        negative-color-hover: $theme-hacker-negative-color-hover,
-        negative-color-selected: $theme-hacker-negative-color-selected,
-        negative-color-selected-hover: $theme-hacker-negative-color-selected-hover,
-        private-color: $theme-hacker-private-color,
-        shareable-color: $theme-hacker-shareable-color,
-        ui-border-color: $theme-hacker-ui-border-color,
-        layout-border-color: $theme-hacker-layout-border-color,
-        warning-color: $theme-hacker-warning-color,
-        warning-color-hover: $theme-hacker-warning-color-hover,
-        warning-color-selected: $theme-hacker-warning-color-selected,
-        warning-color-selected-hover: $theme-hacker-warning-color-selected-hover
+  primary-color: $theme-hacker-primary-color,
+  primary-hover-color: $theme-hacker-primary-hover-color,
+  primary-selected-color: $theme-hacker-primary-selected-color,
+  primary-selected-hover-color: $theme-hacker-primary-selected-hover-color,
+  primary-text-color: $theme-hacker-primary-text-color,
+  text-color-on-inverted: $theme-hacker-text-color-on-inverted,
+  secondary-text-color: $theme-hacker-secondary-text-color,
+  placeholder-color: $theme-hacker-placeholder-color,
+  icon-color: $theme-hacker-icon-color,
+  link-color: $theme-hacker-link-color,
+  primary-background-color: $theme-hacker-primary-background-color,
+  primary-background-hover-color: $theme-hacker-primary-background-hover-color,
+  secondary-background-color: $theme-hacker-secondary-background-color,
+  grey-background-color: $theme-hacker-grey-background-color,
+  allgrey-background-color: $theme-hacker-allgrey-background-color,
+  inverted-color-background: $theme-hacker-inverted-color-background,
+  disabled-text-color: $theme-hacker-disabled-text-color,
+  disabled-background-color: $theme-hacker-disabled-background-color,
+  positive-color: $theme-hacker-positive-color,
+  positive-color-hover: $theme-hacker-positive-color-hover,
+  positive-color-selected: $theme-hacker-positive-color-selected,
+  positive-color-selected-hover: $theme-hacker-positive-color-selected-hover,
+  negative-color: $theme-hacker-negative-color,
+  negative-color-hover: $theme-hacker-negative-color-hover,
+  negative-color-selected: $theme-hacker-negative-color-selected,
+  negative-color-selected-hover: $theme-hacker-negative-color-selected-hover,
+  private-color: $theme-hacker-private-color,
+  shareable-color: $theme-hacker-shareable-color,
+  ui-border-color: $theme-hacker-ui-border-color,
+  layout-border-color: $theme-hacker-layout-border-color,
+  warning-color: $theme-hacker-warning-color,
+  warning-color-hover: $theme-hacker-warning-color-hover,
+  warning-color-selected: $theme-hacker-warning-color-selected,
+  warning-color-selected-hover: $theme-hacker-warning-color-selected-hover
 );
-
 
 // DARK THEME SHADOW MAP: dark theme's shadow color map.
 // - Map include shadow scope tokens.
 // - Map is collected into the $theme-hacker-settings map and is interpolated into custom properties.
 
 $theme-hacker-shadow-keys: (
-        box-shadow-xs: $theme-hacker-box-shadow-xs,
-        box-shadow-small: $theme-hacker-box-shadow-small,
-        box-shadow-medium: $theme-hacker-box-shadow-medium,
-        box-shadow-large: $theme-hacker-box-shadow-large,
+  box-shadow-xs: $theme-hacker-box-shadow-xs,
+  box-shadow-small: $theme-hacker-box-shadow-small,
+  box-shadow-medium: $theme-hacker-box-shadow-medium,
+  box-shadow-large: $theme-hacker-box-shadow-large
 );
