--- a/src/config/tokens/themes/dark/keys/legacy/_dark-theme-legacy-keys.scss
+++ b/src/config/tokens/themes/dark/keys/legacy/_dark-theme-legacy-keys.scss
@@ -35,7 +35,7 @@ $theme-dark-dialog-background-color: $color-graphite;
 $theme-dark-label-background-color: $color-buster_blue; // todo: fix, not part of Vibe colors
 $theme-dark-label-background-on-secondary-color: $color-buster_blue; // todo: fix, not part of Vibe colors
 
-$theme-dark-icon-on-secondary-color: $color-wolf_gray;; // todo: fix, theme basic natural color
+$theme-dark-icon-on-secondary-color: $color-wolf_gray; // todo: fix, theme basic natural color
 $theme-dark-placeholder-color-with-opacity: $color-wolf_gray-with-opacity; // todo: fix, theme basic natural color
 $theme-dark-placeholder-on-secondary-color: $color-wolf_gray; // todo: fix, theme basic natural color
 
@@ -48,7 +48,3 @@ $theme-dark-disabled-background-on-secondary-color: $theme-dark-disabled-backgro
 
 // legacy shadow
 $theme-dark-box-shadow-mediun: var(--box-shadow-medium);
-
-
-
-
