--- a/src/config/maps/core/_core-shadows-map.scss
+++ b/src/config/maps/core/_core-shadows-map.scss
@@ -4,16 +4,16 @@
 // - These maps are currently not interpolated into custom properties.
 
 $core-shadow-size-map: (
-        xs: $shadow-size-xs,
-        small: $shadow-size-small,
-        medium: $shadow-size-medium,
-        large: $shadow-size-large,
-        mediun: var(--box-shadow-medium)
+  xs: $shadow-size-xs,
+  small: $shadow-size-small,
+  medium: $shadow-size-medium,
+  large: $shadow-size-large,
+  mediun: var(--box-shadow-medium)
 );
 
 $core-shadow-opacity-map: (
-        xs-opacity: $shadow-small-opacity,
-        small-opacity: $shadow-small-opacity,
-        medium-opacity: $shadow-medium-opacity,
-        large-opacity: $shadow-large-opacity,
+  xs-opacity: $shadow-small-opacity,
+  small-opacity: $shadow-small-opacity,
+  medium-opacity: $shadow-medium-opacity,
+  large-opacity: $shadow-large-opacity
 );
