Brand colors: brand-color, brand-hover-color, brand-selected-color

--- a/src/config/maps/themes/basic/keys/_keys.scss
+++ b/src/config/maps/themes/basic/keys/_keys.scss
@@ -39,7 +39,10 @@ $theme-basic-keys: (
   warning-color: $warning-color,
   warning-color-hover: $warning-color-hover,
   warning-color-selected: $warning-color-selected,
-  warning-color-selected-hover: $warning-color-selected-hover
+  warning-color-selected-hover: $warning-color-selected-hover,
+  brand-color: $brand-color,
+  brand-hover-color: $brand-hover-color,
+  brand-selected-color: $brand-selected-color
 );
 
 // ## BASIC THEME SHADOW MAP: basic theme's shadow color map.
