--- a/src/config/tokens/themes/basic/keys/_keys.scss
+++ b/src/config/tokens/themes/basic/keys/_keys.scss
@@ -53,6 +53,11 @@ $warning-color-hover: $color-desert;
 $warning-color-selected: $color-summer_sun;
 $warning-color-selected-hover: $color-yellow_sand;
 
+// Brand colors
+$brand-color: $color-burnt-orange;
+$brand-hover-color: $color-rust;
+$brand-selected-color: $color-old-lace;
+
 // UI elements
 // - Borders
 $ui-border-color: $color-wolf_gray;
