--- a/src/config/tokens/themes/basic/palette/_palette.scss
+++ b/src/config/tokens/themes/basic/palette/_palette.scss
@@ -28,6 +28,11 @@ $color-desert: #eaaa15;
 $color-summer_sun: #fceba1;
 $color-yellow_sand: #f2d973;
 
+// brand colors
+$color-burnt-orange: #d14900;
+$color-rust: #ad4005;
+$color-old-lace: #fff1e9;
+
 // Natural
 $color-black: #000000;
 $color-snow_white: #ffffff;
