--- a/src/config/tokens/themes/black/keys/_black-theme-keys.scss
+++ b/src/config/tokens/themes/black/keys/_black-theme-keys.scss
@@ -51,6 +51,11 @@ $theme-black-warning-color-hover: $color-desert;
 $theme-black-warning-color-selected: $color-brass;
 $theme-black-warning-color-selected-hover: $color-aztec_gold;
 
+// brand colors
+$theme-black-brand-color: $color-burnt-orange;
+$theme-black-brand-hover-color: $color-rust;
+$theme-black-brand-selected-color: $color-granite-gray;
+
 // UI elements
 // - Borders
 $theme-black-ui-border-color: $color-smoke;
