--- a/src/config/tokens/themes/dark/keys/_dark-theme-keys.scss
+++ b/src/config/tokens/themes/dark/keys/_dark-theme-keys.scss
@@ -52,6 +52,11 @@ $theme-dark-warning-color-hover: $color-desert;
 $theme-dark-warning-color-selected: $color-brass;
 $theme-dark-warning-color-selected-hover: $color-aztec_gold;
 
+// brand colors
+$theme-dark-brand-color: $color-burnt-orange;
+$theme-dark-brand-hover-color: $color-rust;
+$theme-dark-brand-selected-color: $color-independence;
+
 // UI elements
 // - Borders
 $theme-dark-ui-border-color: $color-fog;
