--- a/src/config/tokens/themes/dark/palette/_dark-theme-palette.scss
+++ b/src/config/tokens/themes/dark/palette/_dark-theme-palette.scss
@@ -18,6 +18,9 @@ $color-amber_red: #5a2027;
 $color-brass: #503e02; // Warning colors
 $color-aztec_gold: #402f00;
 
+// brand color
+$color-independence: #4b4e69;
+
 // Natural / Gray
 $color-midnight: #181b34;
 $color-graphite: #30324e;
