--- a/src/config/tokens/themes/hacker/keys/_hacker-theme-keys.scss
+++ b/src/config/tokens/themes/hacker/keys/_hacker-theme-keys.scss
@@ -53,6 +53,11 @@ $theme-hacker-warning-color-hover: $color-desert;
 $theme-hacker-warning-color-selected: $color-brass;
 $theme-hacker-warning-color-selected-hover: $color-aztec_gold;
 
+// brand colors
+$theme-hacker-brand-color: $color-burnt-orange;
+$theme-hacker-brand-hover-color: $color-rust;
+$theme-hacker-brand-selected-color: $color-granite-gray;
+
 // UI elements
 // - Borders
 $theme-hacker-ui-border-color: $color-fog;
