--- a/src/config/maps/themes/dark/keys/_dark-theme-keys.scss
+++ b/src/config/maps/themes/dark/keys/_dark-theme-keys.scss
@@ -40,7 +40,10 @@ $theme-dark-keys: (
   warning-color: $theme-dark-warning-color,
   warning-color-hover: $theme-dark-warning-color-hover,
   warning-color-selected: $theme-dark-warning-color-selected,
-  warning-color-selected-hover: $theme-dark-warning-color-selected-hover
+  warning-color-selected-hover: $theme-dark-warning-color-selected-hover,
+  brand-color: $theme-dark-brand-color,
+  brand-hover-color: $theme-dark-brand-hover-color,
+  brand-selected-color: $theme-dark-brand-selected-color
 );
 
 // DARK THEME SHADOW MAP: dark theme's shadow color map.
