--- a/src/config/tokens/core/_core-typography.scss
+++ b/src/config/tokens/core/_core-typography.scss
@@ -1,26 +1,6 @@
 // CORE TOKENS: TYPOGRAPHY
 // This partial Defines Global Typography tokens
 
-// FONTS SCALES
-// Font Size scale
-$font-size-10: 14px;
-$font-size-20: 16px;
-$font-size-30: 18px;
-$font-size-40: 24px;
-$font-size-50: 32px;
-
-// Line height scale
-$font-line-height-10: 24px;
-$font-line-height-20: 30px;
-$font-line-height-30: 40px;
-
-// Font weight scale
-$font-weight-10: 300;
-$font-weight-20: 400;
-$font-weight-30: 500;
-$font-weight-40: 600;
-$font-weight-50: 700;
-
 // Font family
 $font-family-english-heading: "Poppins";
 $font-family-english-text: "Figtree";
@@ -29,19 +9,19 @@ $text-font-family: $font-family-english-text, $font-family-other-languages;
 $title-font-family: $font-family-english-heading, $font-family-other-languages;
 
 // Font definition shorthands per semantics atom definitions
-$font-h1-bold: #{$font-weight-50} #{$font-size-50}/#{$font-line-height-30} #{$title-font-family};
-$font-h1-normal: #{$font-weight-30} #{$font-size-50}/#{$font-line-height-30} #{$title-font-family};
-$font-h1-light: #{$font-weight-10} #{$font-size-40}/#{$font-line-height-20} #{$title-font-family};
-$font-h2-bold: #{$font-weight-50} #{$font-size-40}/#{$font-line-height-20} #{$title-font-family};
-$font-h2-normal: #{$font-weight-30} #{$font-size-40}/#{$font-line-height-20} #{$title-font-family};
-$font-h2-light: #{$font-weight-10} #{$font-size-30}/#{$font-line-height-10} #{$title-font-family};
-$font-h3-bold: #{$font-weight-40} #{$font-size-30}/#{$font-line-height-20} #{$title-font-family};
-$font-h3-normal: #{$font-weight-30} #{$font-size-30}/#{$font-line-height-20} #{$title-font-family};
-$font-h3-light: #{$font-weight-10} #{$font-size-30}/#{$font-line-height-10} #{$title-font-family};
-$font-text1-bold: #{$font-weight-50} #{$font-size-20}/#{$font-line-height-30} #{$title-font-family};
-$font-text1-normal: #{$font-weight-30} #{$font-size-20}/#{$font-line-height-30} #{$title-font-family};
-$font-text2-bold: #{$font-weight-50} #{$font-size-10}/#{$font-line-height-20} #{$text-font-family};
-$font-text2-normal: #{$font-weight-30} #{$font-size-10}/#{$font-line-height-20} #{$text-font-family};
+$font-h1-bold: 700 32px/40px $title-font-family;
+$font-h1-normal: 500 32px/40px $title-font-family;
+$font-h1-light: 300 24px/30px $title-font-family;
+$font-h2-bold: 700 24px/30px $title-font-family;
+$font-h2-normal: 500 24px/30px $title-font-family;
+$font-h2-light: 300 18px/24px $title-font-family;
+$font-h3-bold: 600 18px/30px $title-font-family;
+$font-h3-normal: 500 18px/30px $title-font-family;
+$font-h3-light: 300 18px/24px $title-font-family;
+$font-text1-bold: 700 16px/40px $title-font-family;
+$font-text1-normal: 500 16px/40px $title-font-family;
+$font-text2-bold: 700 14px/24px $text-font-family;
+$font-text2-normal: 500 14px/24px $text-font-family;
 
 // Letter spacing definition per semantics atom definitions
 $letter-spacing-h1-bold: -0.2%;
