--- a/src/config/tokens/themes/dark/palette/_dark-theme-palette.scss
+++ b/src/config/tokens/themes/dark/palette/_dark-theme-palette.scss
@@ -9,7 +9,7 @@ $color-ocean_blue: #133774;
 $color-deep_blue: #0d2e65;
 
 // - Semantics
-$color-forest_green: #26503e;
+$color-forest_green: #025231;
 $color-darker_green: #194733;
 
 $color-maroon_red: #642830;
