add support in export mixins in monday ui styles

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,9 +10,9 @@
 
 // Dependencies
 @import "functions";
-@import "mixins";
+@import "internal-mixins";
 @import "config";
-@import "classes";
+
 
 // Output
 @import "core";
