--- a/src/mixins/_typography.scss
+++ b/src/mixins/_typography.scss
@@ -2,11 +2,11 @@
   font: var(--font-text-#{$class-prefix}-#{$weight-type});
 }
 
-@mixin vibe-title($class-prefix, $weight-type) {
-  font: var(--font-#{$class-prefix}-#{$weight-type});
+@mixin vibe-heading($type-prefix, $weight-type) {
+  font: var(--font-#{$type-prefix}-#{$weight-type});
 
   margin: 0;
-  letter-spacing: var(--letter-spacing-#{$class-prefix}-#{$weight-type});
+  letter-spacing: var(--letter-spacing-#{$type-prefix}-#{$weight-type});
   -webkit-font-smoothing: var(--font-smoothing-webkit);
   -moz-osx-font-smoothing: var(--font-smoothing-moz);
 }
