--- a/src/mixins/_typography.scss
+++ b/src/mixins/_typography.scss
@@ -2,13 +2,9 @@
   font: var(--font-text-#{$class-prefix}-#{$weight-type});
 }
 
-@mixin vibe-title($class-prefix, $weight-type, $with-browser-margin: false) {
+@mixin vibe-title($class-prefix, $weight-type) {
   font: var(--font-#{$class-prefix}-#{$weight-type});
   letter-spacing: var(--letter-spacing-#{$class-prefix}-#{$weight-type});
   -webkit-font-smoothing: var(--font-smoothing-webkit);
   -moz-osx-font-smoothing: var(--font-smoothing-moz);
-
-  @if $with-browser-margin == true {
-    margin: 0;
-  }
 }
