--- a/storybook/stand-alone-documentation/spacing/spacing-sizes/spacing-component/spacing-component.scss
+++ b/storybook/stand-alone-documentation/spacing/spacing-sizes/spacing-component/spacing-component.scss
@@ -1,4 +1,4 @@
-@import "../../../../styles/typography";
+@import "../../../../../styles/typography";
 
 .spacing-xs {
   height: var(--spacing-xs);
