--- a/storybook/stand-alone-documentation/spacing/spacing-sizes/spacing-sizes.scss
+++ b/storybook/stand-alone-documentation/spacing/spacing-sizes/spacing-sizes.scss
@@ -1,5 +1,5 @@
-@import "../../../styles/global-css-settings";
-@import "../../../styles/content-spacing";
+@import "../../../../styles/global-css-settings";
+@import "../../../../styles/content-spacing";
 
 $spacing-grid-column-gap: $spacing-small;
 $spacing-grid-row-gap: $spacing-xl;
