breaking changes in new typography: tokens for texts, mixins for heading and texts

--- a/src/mixins/_typography.scss
+++ b/src/mixins/_typography.scss
@@ -1,5 +1,5 @@
-@mixin vibe-text($class-prefix, $weight-type) {
-  font: var(--font-text-#{$class-prefix}-#{$weight-type});
+@mixin vibe-text($type-prefix, $weight-type) {
+  font: var(--font-#{$type-prefix}-#{$weight-type});
 }
 
 @mixin vibe-heading($type-prefix, $weight-type) {
