breaking changes in new typography: tokens for texts, mixins for heading and texts

--- a/src/config/maps/core/_core-typography-map.scss
+++ b/src/config/maps/core/_core-typography-map.scss
@@ -14,8 +14,10 @@ $core-typography-fonts-map: (
   font-h3-normal: $font-h3-normal,
   font-h3-light: $font-h3-light,
   font-text1-bold: $font-text1-bold,
+  font-text1-medium: $font-text1-medium,
   font-text1-normal: $font-text1-normal,
   font-text2-bold: $font-text2-bold,
+  font-text2-medium: $font-text2-medium,
   font-text2-normal: $font-text2-normal
 );
 
